--- a/africashop/src/main/resources/application.properties
+++ b/africashop/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/africashop
+spring.datasource.url=jdbc:mysql://localhost:3306/africashop?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
 spring.datasource.password=
 
